Refactored parser to use new BlockLevel class. Cleaned up errors.

--- a/resources/messages/SilverStripeBundle.properties
+++ b/resources/messages/SilverStripeBundle.properties
@@ -1,4 +1,5 @@
 ss.parsing.bad.var=Bad variable. Check your syntax.
 ss.parsing.missing.delimiter=Incomplete var statement. Add closing delimiter.
 ss.parsing.unclosed.block=Unclosed block statement. Please close "{0}" block.
-ss.parsing.unexpected.end.statement=Unexpected end statement
+ss.parsing.unexpected.end.statement=Unexpected end statement.
+ss.parsing.unexpected.end.statement.expected=Unexpected end statement. Expected "{0}".
