More graceful handling of unrecognized block statements. The parser will now mark statements it doesn't recognize and ask you to report it if you think it's a bug.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -46,5 +46,8 @@
     <lang.fileViewProviderFactory language="SilverStripe" implementationClass="com.raket.silverstripe.file.SilverStripeFileViewProviderFactory"/>
     <lang.foldingBuilder language="SilverStripe"
                            implementationClass="com.raket.silverstripe.editor.folding.SilverStripeFoldingBuilder" />
+    <!--
+    <lang.formatter language="SilverStripe" implementationClass="com.intellij.lang.html.HtmlFormattingModelBuilder"/>
+    -->
   </extensions>
 </idea-plugin>
