--- a/resources/messages/SilverStripeBundle.properties
+++ b/resources/messages/SilverStripeBundle.properties
@@ -3,3 +3,4 @@ ss.parsing.missing.delimiter=Incomplete var statement. Add closing delimiter.
 ss.parsing.unclosed.block=Unclosed block statement. Please close "{0}" block.
 ss.parsing.unexpected.end.statement=Unexpected end statement.
 ss.parsing.unexpected.end.statement.expected=Unexpected end statement. Expected "{0}".
+ss.parsing.bad.block.statement=This statement is currently not recognized by the parser. If you think this is a bug report it at https://github.com/raket/idea-silverstripe/issues/new
