Brace matching implemented. This will feature lights up matching braces for template statements.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -49,5 +49,6 @@
     <!--
     <lang.formatter language="SilverStripe" implementationClass="com.intellij.lang.html.HtmlFormattingModelBuilder"/>
     -->
+    <braceMatcher filetype="SilverStripe" implementationClass="com.raket.silverstripe.editor.braces.SilverStripeBraceMatcher"/>
   </extensions>
 </idea-plugin>
