Implemented layered code formatter. Closes #3 We still need to fix formatting for the SilverStripe templating language though. Opening separate issue for this.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -46,9 +46,7 @@
     <lang.fileViewProviderFactory language="SilverStripe" implementationClass="com.raket.silverstripe.file.SilverStripeFileViewProviderFactory"/>
     <lang.foldingBuilder language="SilverStripe"
                            implementationClass="com.raket.silverstripe.editor.folding.SilverStripeFoldingBuilder" />
-    <!--
-    <lang.formatter language="SilverStripe" implementationClass="com.intellij.lang.html.HtmlFormattingModelBuilder"/>
-    -->
+    <lang.formatter language="SilverStripe" implementationClass="com.raket.silverstripe.format.SilverStripeFormattingModelBuilder"/>
     <braceMatcher filetype="SilverStripe" implementationClass="com.raket.silverstripe.editor.braces.SilverStripeBraceMatcher"/>
   </extensions>
 </idea-plugin>
