Implemented typed handler and enter handler Typing <% loop $var %> will now autocomplete to <% loop $var %><% end_loop %> and pressing enter between the carets will automatically put you in the right place between the blocks.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -86,5 +86,7 @@
                         implementationClass="com.raket.silverstripe.format.SilverStripeFormattingModelBuilder"/>
        <braceMatcher filetype="SilverStripe"
                       implementationClass="com.raket.silverstripe.editor.braces.SilverStripeBraceMatcher"/>
+        <typedHandler implementation="com.raket.silverstripe.editor.actions.SilverStripeTypedHandler"/>
+        <enterHandlerDelegate implementation="com.raket.silverstripe.editor.actions.SilverStripeEnterHandler"/>
     </extensions>
 </idea-plugin>
