--- a/resources/messages/SilverStripeBundle.properties
+++ b/resources/messages/SilverStripeBundle.properties
@@ -4,3 +4,9 @@ ss.parsing.unclosed.block=Unclosed block statement. Please close "{0}" block.
 ss.parsing.unexpected.end.statement=Unexpected end statement.
 ss.parsing.unexpected.end.statement.expected=Unexpected end statement. Expected "{0}".
 ss.parsing.bad.block.statement=This statement is currently not recognized by the parser. If you think this is a bug report it at https://github.com/raket/idea-silverstripe/issues/new
+ss.file.template.group.title.silverstripe=SilverStripe file templates
+ss.newfile.dialog.prompt=Create a new SilverStripe file
+ss.newfile.dialog.title=Create SilverStripe file
+ss.newfile.command.name=SilverStripe file
+ss.newfile.menu.action.text=Create SilverStripe file
+ss.newfile.menu.action.description=Creates a new SilverStripe file
