Implemented annotator for include files Include files can now be navigated to through the icon in the gutter and include files that are not found get an error annotation with a message. They also get a navigation point in the right hand gutter.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -96,5 +96,6 @@
         <lang.syntaxHighlighterFactory key="SilverStripe" implementationClass="com.raket.silverstripe.editor.highlighting.SilverStripeSyntaxHighlighterFactory"/>
         -->
         <codeInsight.lineMarkerProvider language="SilverStripe" implementationClass="com.raket.silverstripe.editor.lines.SilverStripeLineMarkerProvider"/>
+        <annotator language="SilverStripe" implementationClass="com.raket.silverstripe.editor.annotations.SilverStripeIncludeAnnotator"/>
     </extensions>
 </idea-plugin>
