--- a/resources/messages/SilverStripeBundle.properties
+++ b/resources/messages/SilverStripeBundle.properties
@@ -10,3 +10,4 @@ ss.newfile.dialog.title=Create SilverStripe file
 ss.newfile.command.name=SilverStripe file
 ss.newfile.menu.action.text=Create SilverStripe file
 ss.newfile.menu.action.description=Creates a new SilverStripe file
+ss.annotations.file.not.found=Could not find include file "{0}".
