Added comment support. The correct color is now used as well. The one caveat compareed to the animated gifs and that is that a multiline selection will create one comment, not several. @markguinn said that multiline comments do work but I have not tried it myself. If it does not it puts us in somewhat of a bind since IDEA only defines two different comment types, namely singleline and block. Singleline is prefix only so we can't use that. We now have a block comment defined with the correct prefix and suffix and this will trigger if you press the shortcut for single line comment. Closes #17.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -99,5 +99,6 @@
         <codeInsight.lineMarkerProvider language="SilverStripe" implementationClass="com.raket.silverstripe.editor.lines.SilverStripeLineMarkerProvider"/>
         <completion.contributor language="SilverStripe" implementationClass="com.raket.silverstripe.editor.completions.SilverStripeCompletionContributor"/>
         <annotator language="SilverStripe" implementationClass="com.raket.silverstripe.editor.annotations.SilverStripeIncludeAnnotator"/>
+        <lang.commenter language="SilverStripe" implementationClass="com.raket.silverstripe.editor.comments.SilverStripeCommenter"/>
     </extensions>
 </idea-plugin>
