--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -113,8 +113,10 @@
       -->
         <codeInsight.lineMarkerProvider language="SilverStripe" implementationClass="com.raket.silverstripe.editor.lines.SilverStripeLineMarkerProvider"/>
         <completion.contributor language="SilverStripe" implementationClass="com.raket.silverstripe.editor.completions.SilverStripeCompletionContributor"/>
+        <completion.confidence language="SilverStripe" implementationClass="com.raket.silverstripe.editor.completions.SilverStripeCompletionConfidence"/>
         <annotator language="SilverStripe" implementationClass="com.raket.silverstripe.editor.annotations.SilverStripeIncludeAnnotator"/>
         <lang.commenter language="SilverStripe" implementationClass="com.raket.silverstripe.editor.comments.SilverStripeCommenter"/>
         <psi.referenceContributor language="SilverStripe" implementation="com.raket.silverstripe.references.SilverStripeReferenceContributor"/>
+        <spellchecker.support language="SilverStripe" implementationClass="com.intellij.spellchecker.tokenizer.SpellcheckingStrategy"/>
     </extensions>
 </idea-plugin>
