Fixed formatting bug Props to @s-m for finding this. A nasty one at that but it's fixed now. If you use the PsiViewer look for the CRLF element. If those appear in the file something is wrong and the formatting will break. Closes #22.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -99,7 +99,7 @@
         <lang.fileViewProviderFactory language="SilverStripe"
                                       implementationClass="com.raket.silverstripe.file.SilverStripeFileViewProviderFactory"/>
        <lang.formatter language="SilverStripe"
-                       implementationClass="com.raket.silverstripe.format.SilverStripeFormattingModelBuilder"/>
+                       implementationClass="com.raket.silverstripe.editor.format.SilverStripeFormattingModelBuilder"/>
        <colorSettingsPage implementation="com.raket.silverstripe.editor.colors.SilverStripeColorSettingsPage"/>
        <braceMatcher filetype="SilverStripe"
                      implementationClass="com.raket.silverstripe.editor.braces.SilverStripeBraceMatcher"/>
