--- a/resources/messages/SilverStripeBundle.properties
+++ b/resources/messages/SilverStripeBundle.properties
@@ -11,3 +11,5 @@ ss.newfile.command.name=SilverStripe file
 ss.newfile.menu.action.text=Create SilverStripe file
 ss.newfile.menu.action.description=Creates a new SilverStripe file
 ss.annotations.file.not.found=Could not find include file "{0}".
+ss.annotations.translation.no.identifier=Missing identifier in translation tag
+ss.annotations.translation.no.parameter.match=The parameters do not match up. Please add "{0}".
